--- a/src/PruebaBackAPI/PruebaBackAPI.csproj
+++ b/src/PruebaBackAPI/PruebaBackAPI.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
+    <PropertyGroup>
+     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+     <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
 </Project>
