--- a/src/PruebaBackAPI/appsettings.Development.json
+++ b/src/PruebaBackAPI/appsettings.Development.json
@@ -5,8 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings":
-  {
-    "PostgreSqlConnection":"Host=localhost; Port=5432; Database=appdb; Pooling=true;"
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "Host=localhost; Port=5432; Database=appdb; Pooling=true;"
   }
 }
